tests/snapshots/file@string@error_after_multiline.lox.snap
---
source: tests/common/mod.rs
description: "// Tests that we correctly track the line info across multiline strings.\nvar a = \"1\n2\n3\n\";\n\nerr; // // expect runtime error: Undefined variable 'err'."
input_file: crafting_interpreters_test_files/string/error_after_multiline.lox
---
OUT: 

===
ERR: 
  × undefined variable `err`
   ╭─[7:1]
 6 │ 
 7 │ err; // // expect runtime error: Undefined variable 'err'.
   · ─┬─
   ·  ╰── here
   ╰────
